[package]
name = "fero"
version = "0.1.0"
authors = ["Alex Crawford <alex.crawford@coreos.com>"]

[dependencies]
clap = "2"
diesel = { version = "1", features = ["sqlite"] }
failure = "0.1"
futures = "0.1"
grpcio = "0.2"
log = "0.4"
loggerv = "0.7"
num = "0.1.40"
pretty-good = "0.1"
protobuf = "1.4"
yasna = "0.1.3"

[dependencies.gpgme]
version = "0.7"

[dependencies.libyubihsm]
version = "0.1"

[build-dependencies]
grpcio-compiler = "0.2"
tempdir = "0.3"
protobuf = "1.4"
protoc = "1.4"
