[package]
name = "fero-proto"
version = "0.1.1"
authors = ["Alex Crawford <alex.crawford@coreos.com>", "James Forcier <csssuf@csssuf.net>"]
workspace = ".."

[dependencies]
byteorder = "1"
chrono = "0.4"
diesel = { version = "1", features = ["sqlite", "chrono"] }
diesel-derive-enum = { version = "^0.4.4", features = ["sqlite"] }
failure = "0.1"
futures = "0.1"
grpcio = "0.2"
protobuf = "1.4"
sha2 = "0.7"

[build-dependencies]
grpcio-compiler = "0.2"
tempdir = "0.3"
protobuf = "1.4"
protoc = "1.4"
