[package]
name = "fero-server"
version = "0.1.0"
authors = ["Alex Crawford <alex.crawford@coreos.com>"]
workspace = ".."

[dependencies]
diesel = { version = "1", features = ["sqlite"] }
failure = "0.1"
futures = "0.1"
grpcio = "0.2"
log = "0.4"
loggerv = "0.7"
num = "0.1.40"
pretty-good = "0.1"
protobuf = "1.4"
structopt = "0.2"
yasna = "0.1.3"

[dependencies.fero-proto]
path = "../fero-proto/"

[dependencies.gpgme]
version = "0.7"

[dependencies.libyubihsm]
version = "0.1"
