[package]
name = "fero-server"
version = "0.1.1"
authors = ["Alex Crawford <alex.crawford@coreos.com>", "James Forcier <csssuf@csssuf.net>"]
workspace = ".."

[dependencies]
byteorder = "1"
chrono = "0.4"
diesel = { version = "1", features = ["sqlite", "chrono"] }
diesel_migrations = "1"
failure = "0.1"
futures = "0.1"
gag = "0.1"
grpcio = "0.2"
log = "0.4"
loggerv = "0.7"
num = "0.1.40"
pem = "0.5"
pretty-good = "0.2.2"
protobuf = "1.4"
rpassword = "2"
secstr = "0.3"
structopt = "0.2"
tempfile = "3.0.1"
rand = "0.4"
sha2 = "0.7"
yasna = "0.1.3"

[dependencies.fero-proto]
path = "../fero-proto/"

[dependencies.gpgme]
version = "0.7"

[dependencies.libyubihsm]
version = "0.2.1"
